--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
 		"phpmailer/phpmailer": "dev-master",
         "yiiext/taggable-behavior" : "1.5.*",
         "nodge/yii-eauth": "dev-master",
-        "imagine/imagine": "v0.5.0"
+        "imagine/imagine": "v0.5.0",
+        "symfony/event-dispatcher" : "2.*"
     },
     "repositories": {
         "taggable": {
