--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,9 @@
         "yiiext/taggable-behavior" : "1.5.*",
         "nodge/yii-eauth": "dev-master",
         "imagine/imagine": "v0.5",
-        "symfony/event-dispatcher" : "2.*"
+        "symfony/event-dispatcher" : "2.*",
+        "twig/twig": "1.*",
+        "yiiext/twig-renderer":"1.1.*"
     },
     "repositories": {
         "taggable": {
@@ -85,6 +87,18 @@
                     "url": "https://github.com/yiiext/taggable-behavior.git",
                     "type": "git",
                     "reference": "b3713545565374522b3cb2b1fe066720466f0897"
+                }
+            }
+        },
+        "twig":{
+            "type":"package",
+            "package":{
+                "name":"yiiext/twig-renderer",
+                "version":"1.1.15",
+                "source":{
+                    "type":"git",
+                    "url":"https://github.com/yiiext/twig-renderer",
+                    "reference":"v1.1.15"
                 }
             }
         }
