--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -20,7 +20,7 @@ modules:
             host: '127.0.0.1'
             url: 'http://yupe.local/index-test.php'
             browser: firefox
-            delay: 100
+            wait: 1
         DbHelper:
              dsn: 'mysql:host=127.0.0.1;dbname=<db.name>'
              user: '<db.user>'
