--- a/composer.json
+++ b/composer.json
@@ -104,8 +104,7 @@
         }
     },
     "require-dev": {
-        "codeception/codeception": "2.*",
-        "malyshev/yii-debug-toolbar": "dev-master"
+        "codeception/codeception": "2.*"
     },
     "minimum-stability": "stable"
 }
