--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,16 @@
             "role": "Developer"
         },
         {
+            "name": "Plaksunov Yuri",
+            "homepage": "http://amylabs.ru",
+            "role": "Developer"
+        },
+        {
+            "name": "Mihail Chemezov",
+            "homepage": "http://vk.com/m.chemezov",
+            "role": "Developer"
+        },
+        {
             "name": "Alexander Tischenko",
             "email": "tsm@archaron.ru",
             "homepage": "http://archaron.ru/",
