--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "twig/twig": "1.*",
         "yiiext/twig-renderer": "1.1.*",
         "guzzlehttp/guzzle": "5.0.*",
-        "brussens/wysibb-yii": "dev-master"
+        "brussens/wysibb-yii": "dev-master",
+        "fantgeass/yiidecoda": "dev-master"
     },
     "repositories": {
         "taggable": {
@@ -95,6 +96,18 @@
                 "source": {
                     "type": "git",
                     "url": "https://github.com/brussens/wysibb-yii",
+                    "reference": "master"
+                }
+            }
+        },
+        "yiidecoda": {
+            "type": "package",
+            "package": {
+                "name": "fantgeass/yiidecoda",
+                "version": "master",
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/fantgeass/yiidecoda",
                     "reference": "master"
                 }
             }
