Модуль "Comment". Настройка визуального редактора. Осознал свою ошибочную точку зрения. Поэтому список изменений следующий: 1) убрана сторонняя библиотека yiidecoda. 2) в качестве визуального редактора для комментариев теперь можно выбрать textarea или redactor. Убран wysibb. 3) добавлен парамерт отвечающий за то как выводить текст, используя функцию strip_tags или нет 4) подправлена форма редактирования/создания комментария в админке. Изменен класс div'а на col-sm-12 5) при выводе комментариев списком в админке теперь используется функция getText() 6) в класс WebModule добавлен парамерт $visualEditors. Перенесен из YupeModule

--- a/composer.json
+++ b/composer.json
@@ -60,8 +60,7 @@
         "twig/twig": "1.*",
         "yiiext/twig-renderer": "1.1.*",
         "guzzlehttp/guzzle": "5.0.*",
-        "brussens/wysibb-yii": "dev-master",
-        "fantgeass/yiidecoda": "dev-master"
+        "brussens/wysibb-yii": "dev-master"
     },
     "repositories": {
         "taggable": {
@@ -96,18 +95,6 @@
                 "source": {
                     "type": "git",
                     "url": "https://github.com/brussens/wysibb-yii",
-                    "reference": "master"
-                }
-            }
-        },
-        "yiidecoda": {
-            "type": "package",
-            "package": {
-                "name": "fantgeass/yiidecoda",
-                "version": "master",
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/fantgeass/yiidecoda",
                     "reference": "master"
                 }
             }
