--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "twig/twig": "1.*",
         "yiiext/twig-renderer": "1.1.*",
         "guzzlehttp/guzzle": "5.0.*",
-        "brussens/wysibb-yii": "dev-master"
+        "brussens/wysibb-yii": "dev-master",
+        "crisu83/yii-seo": "dev-master"
     },
     "repositories": {
         "taggable": {
