#2037 Консольная команда для миграций

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
         "guzzlehttp/guzzle": "5.0.*",
         "brussens/wysibb-yii": "dev-master",
         "2amigos/transliterator-helper": "dev-master",
-        "chemezov/yii-seo": "1.0.*"
+        "chemezov/yii-seo": "1.0.*",
+        "yiiext/migrate-command": "dev-master"
     },
     "repositories": {
         
