fix composer deps

--- a/composer.json
+++ b/composer.json
@@ -55,9 +55,9 @@
         "yiisoft/yii": ">=1.1.16",
         "clevertech/yii-booster": "4.*",
         "yiiext/nested-set-behavior": "dev-master",
-        "yiiext/imperavi-redactor-widget": "dev-master",
-        "zhuravljov/yii2-debug": "dev-master",
-        "phpmailer/phpmailer": "dev-master",
+        "yiiext/imperavi-redactor-widget": "1.3.*",
+        "zhuravljov/yii2-debug": "1.4",
+        "phpmailer/phpmailer": "5.2.*",
         "yiiext/taggable-behavior": "1.5.*",
         "nodge/yii-eauth": "dev-master",
         "imagine/imagine": "0.6.*",
