--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "yupe/yupe",
-    "description": "Yupe is simple and lightweight CMF for web-development, built on top of Yii",
-    "keywords": ["yupe", "yii", "web", "cms", "cmf"],
-    "homepage": "http://yupe.ru",
-    "type": "cmf",
+    "description": "Yupe is simple and lightweight CMF for web-development, built on top of Yii 1.x",
+    "keywords": ["yupe", "yii", "web", "cms", "cmf", "shop", "ecommerce"],
+    "homepage": "http://yupe-project.ru",
+    "type": "project",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -45,10 +45,12 @@
         }
     ],
     "support": {
-        "email": "team@yupe.ru",
+        "email": "support@yupe.ru",
         "issues": "https://github.com/yupe/yupe/issues",
         "forum": "http://yupe.ru/talk/",
-        "source": "https://github.com/yupe/yupe/"
+        "source": "https://github.com/yupe/yupe/",
+        "irc": "https://gitter.im/yupe/yupe",
+        "docs": "http://yupe.ru/docs/"
     },
     "require": {
         "php": ">=5.4",
