Yupe Model Generator

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         },
         {
             "name": "Maxim Timashov",
-            "email": "apexwire@amylabs.com",
+            "email": "apexwire@amylabs.ru",
             "role": "Developer"
         },
         {
