--- a/composer.json
+++ b/composer.json
@@ -112,7 +112,7 @@
         }
     },
     "require-dev": {
-        "codeception/codeception": "2.0.*"
+        "codeception/codeception": "*"
     },
     "minimum-stability": "stable",
     "autoload": {
