--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,6 @@
             "role": "Developer"
         },
         {
-            "name": "Anton Kucherov",
-            "homepage": "http://idexter.ru/",
-            "role": "Developer"
-        },
-        {
             "name": "Maxim Timashov",
             "email": "apexwire@amylabs.ru",
             "role": "Developer"
@@ -31,11 +26,6 @@
         {
             "name": "Plaksunov Yuri",
             "homepage": "http://amylabs.ru",
-            "role": "Developer"
-        },
-        {
-            "name": "Mihail Chemezov",
-            "homepage": "http://vk.com/m.chemezov",
             "role": "Developer"
         },
         {
@@ -53,7 +43,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "yiisoft/yii": "1.1.16",
+        "yiisoft/yii": "1.1.17",
         "clevertech/yii-booster": "4.*",
         "yiiext/nested-set-behavior": "dev-master",
         "yiiext/imperavi-redactor-widget": "1.3.*",
@@ -62,10 +52,10 @@
         "yiiext/taggable-behavior": "1.5.*",
         "nodge/yii-eauth": "dev-master",
         "imagine/imagine": "0.6.*",
-        "symfony/event-dispatcher": "2.*",
+        "symfony/event-dispatcher": "3.*",
         "twig/twig": "1.*",
         "yiiext/twig-renderer": "1.1.*",
-        "guzzlehttp/guzzle": "5.3.0",
+        "guzzlehttp/guzzle": "6.*",
         "2amigos/transliterator-helper": "dev-master",
         "chemezov/yii-seo": "1.0.*",
         "yiiext/migrate-command": "dev-master",
@@ -94,18 +84,6 @@
                     "type": "git",
                     "url": "https://github.com/yiiext/twig-renderer",
                     "reference": "v1.1.15"
-                }
-            }
-        },
-        "wysibb-yii": {
-            "type": "package",
-            "package": {
-                "name": "brussens/wysibb-yii",
-                "version": "master",
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/brussens/wysibb-yii",
-                    "reference": "master"
                 }
             }
         }
