--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         {
             "name": "Maxim Timashov",
             "email": "apexwire@amylabs.ru",
+            "homepage": "http://amylabs.ru",
             "role": "Developer"
         },
         {
@@ -31,6 +32,7 @@
         {
             "name": "Oleg Filimonov",
             "email": "olegsabian@gmail.com",
+            "homepage": "http://amylabs.ru",
             "role": "Developer"
         }
     ],
@@ -47,7 +49,7 @@
         "clevertech/yii-booster": "4.*",
         "yiiext/nested-set-behavior": "dev-master",
         "yiiext/imperavi-redactor-widget": "1.3.*",
-        "zhuravljov/yii2-debug": "1.4",
+        "zhuravljov/yii2-debug": "1.4.*",
         "phpmailer/phpmailer": "5.2.*",
         "yiiext/taggable-behavior": "1.5.*",
         "nodge/yii-eauth": "dev-master",
