change forum url

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "support": {
         "email": "support@yupe.ru",
         "issues": "https://github.com/yupe/yupe/issues",
-        "forum": "http://yupe.ru/talk/",
+        "forum": "http://talk.yupe.ru/",
         "source": "https://github.com/yupe/yupe/",
         "docs": "http://yupe.ru/docs/"
     },
