--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "yupe/yupe",
     "description": "Yupe is simple and lightweight CMF for web-development, built on top of Yii 1.x",
     "keywords": ["yupe", "yii", "web", "cms", "cmf", "shop", "ecommerce"],
-    "homepage": "http://yupe-project.ru",
+    "homepage": "http://yupe.ru",
     "type": "project",
     "license": "BSD-3-Clause",
     "authors": [
