--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "yiisoft/yii": "1.1.17",
         "clevertech/yii-booster": "4.*",
         "yiiext/nested-set-behavior": "dev-master",
-        "yiiext/imperavi-redactor-widget": "1.3.*",
+        "yiiext/imperavi-redactor-widget": "dev-master",
         "zhuravljov/yii2-debug": "1.4.*",
         "phpmailer/phpmailer": "5.2.*",
         "yiiext/taggable-behavior": "1.5.*",
