--- a/protected/config/main-local.php.dist
+++ b/protected/config/main-local.php.dist
@@ -29,6 +29,11 @@ return [
         'urlManager' => [
             'rules' => [
                 '/gii/<controller:\w+>/<action:\w+>' => 'gii/<controller>/<action>',
+                '/debug/' => 'debug/default/index',
+                '/debug/<tag:[0-9a-f]+>/<action:toolbar|explain>' => 'debug/default/<action>',
+                '/debug/<tag:[0-9a-f]+>/<panel:\w+>' => 'debug/default/view',
+                '/debug/latest/<panel:\w+>' => 'debug/default/view',
+                '/debug/<action:\w+>' => 'debug/default/<action>',
             ]
         ],
     ]
