- #2706: Добавлено в .htaccess редирект страницы с слешом, на страницу без слеша (@dzhedai, samox1n)

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,11 @@
 AddDefaultCharset utf-8
 <IfModule mod_rewrite.c>
     RewriteEngine on
+
+    # Убираем слеш в конце адреса
+    # RewriteBase /
+    # RewriteCond %{REQUEST_URI} .+/$ [NC]
+    # RewriteRule ^(.+)(/)$ $1 [L,R=301]
     
     # Универсальный редирект с домена С www. на домен БEЗ www
     # при необходимости - раскомментировать:
